// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Lindsay McIntosh, Scottish Political Editor
    </Text>
  </Text>
</View>
`;

exports[`2. with the author in the begining 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`3. with the author at the end 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      RBS Six Nations, 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Mike Atherton
    </Text>
  </Text>
</View>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
       | 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Mike Atherton
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
       | 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      , 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Mike Atherton
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      , 
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    testID="author"
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Camilla Long
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
       
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Mike Atherton
    </Text>
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`7. null with an empty ast 1`] = `
<Text
  maxFontSizeMultiplier={2}
  minimumFontScale={0.7}
  testID="author"
/>
`;
